...

class ProfileRepositoryLocal : ProfileRepository {

  val profileFake1 =
      Profile(
          userId = "test",
          name = "John Doe",
          email = "john.doe@epfl.ch",
          location = Location(latitude = 0.0, longitude = 0.0, name = "EPFL"),
          description = "Nice Guy")
  val profileFake2 =
      Profile(
          userId = "fake2",
...
